<resources>

    <!--URL-->
    <string name="URL_POST_CARGO_IN_MESSAGE">http://47.107.93.138:8081/api/addCargo</string>
    <string name="URL_STOCK_OUT_DETAIL">http://47.107.93.138:8081/api/stockOutProductInfo</string>
    <string name="URL_STOCK_OUT_CLIENT_INFO">http://47.107.93.138:8081/api/stockOutCustomInfo</string>
    <string name="URL_STOCK_IN_SCAN_NAME">http://47.107.93.138:8081/api/productList</string>
    <string name="URL_RECEVICE_TYPE">http://47.107.93.138:8081/api/categoryList</string>
    <string name="URL_LOGIN">http://47.107.93.138:8081/api/login</string>
    <string name="URL_LOGIN_COMPANY">http://47.107.93.138:8081/api/companyList</string>
    <string name="URL_REQUEST_DATA_FOR_STOCK_CHANGE_LIST">http://47.107.93.138:8081/api/stockMoveList</string>
    <string name="URL_REQUEST_DATA_FOR_STOCK_OUT_LIST">http://47.107.93.138:8081/api/stockOutList</string>
    <string name="URL_REQUEST_DATA_FOR_STOCK_IN_LIST">http://47.107.93.138:8081/api/stockInList</string>
    <string name="URL_STOCK_IN_DETAIL">http://47.107.93.138:8081/api/stockInProductInfo</string>
    <string name="URL_STOCK_CHANGE_DETAIL">http://47.107.93.138:8081/api/stockMoveProductInfo</string>
    <string name="URL_STOCK_CHANGE_WAREHOUSE_DETAIL">http://47.107.93.138:8081/api/stockMoveWarehouseInfo</string>
    <string name="URL_REQUEST_DATA_FOR_STOCK_CHECK_LIST">http://47.107.93.138:8081/api/stockCheckList</string>
    <string name="URL_STOCK_CHECK_DETAIL">http://47.107.93.138:8081/api/stockCheckProductInfo</string>
    <string name="URL_STOCK_CHECK_WAREHOUSE_DETAIL">http://47.107.93.138:8081/api/stockCheckWarehouseInfo</string>
    <string name="URL_USER_QUIT">http://47.107.93.138:8081/api/logout</string>
    <string name="URL_STOCK_IN_START">http://47.107.93.138:8081/api/stockInServe</string>
    <string name="URL_STOCK_OUT_START">http://47.107.93.138:8081/api/stockOutServe</string>
    <string name="URL_STOCK_CHANGE_START">http://47.107.93.138:8081/api/stockMoveServe</string>
    <string name="URL_STOCK_CHECK_START">http://47.107.93.138:8081/api/stockCheckServe</string>
    <string name="URL_STOCK_IN_SUBMIT">http://47.107.93.138:8081/api/stockInFinish</string>
    <string name="URL_STOCK_OUT_SUBMIT">http://47.107.93.138:8081/api/stockOutFinish</string>
    <string name="URL_STOCK_CHANGE_SUBMIT">http://47.107.93.138:8081/api/stockMoveFinish</string>
    <string name="URL_STOCK_CHECK_SUBMIT">http://47.107.93.138:8081/api/stockCheckFinish</string>
    <string name="URL_WARE_HOUSE_LIST">http://47.107.93.138:8081/api/warehouseList</string>
    <string name="URL_AREA_SHELF_LIST">http://47.107.93.138:8081/api/areaAndShelfList</string>
    <string name="URL_LARER">http://47.107.93.138:8081/api/larerList</string>

    <!--应用-->
    <string name="app_name">SmartStore</string>
    <string name="app_chinese_name">鼎力智能仓储系统</string>

    <!--登录-->
    <string name="login_enter">登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>

    <!--底部导航栏-->
    <string name="stock_in">入库</string>
    <string name="stock_out">出库</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_in_start_scan">开始</string>
    <string name="stock_in_stop_scan">停止</string>

    <string name="lose_configurationfile">配置文件丢失</string>
    <string name="success">success</string>
    <string name="exception_occurred">发生异常,异常信息:%s</string>
    <string name="type">类型</string>
    <string name="submit">提交</string>
    <string name="describe_hint">请输入备注</string>
    <string name="stock_in_reset_scan">重置</string>
    <string name="stock_in_submit_scan">提交</string>
    <string name="type_first">类型1</string>
    <string name="type_second">类型2</string>
    <string name="scan">扫描</string>
    <string name="id">序号</string>
    <string name="rfid">rfid码</string>
    <string name="num">数量</string>
    <string name="detail_id_title">单号：</string>
    <string name="detail_name_title">客户名称：</string>
    <string name="detail_phoner_number_title">联系方式：</string>
    <string name="detail_address_title">地址：</string>
    <string name="date">日期</string>
    <string name="item_stock_out_id">单号</string>
    <string name="item_stock_out_detail_num">已扫/总量</string>
    <string name="item_stock_out_detail_position">位置</string>
    <string name="stock_change">移库</string>
    <string name="cargo_name">货物名称</string>
    <string name="name">名称</string>
    <string name="item_stock_change_detail_position_out">原始位置</string>
    <string name="item_stock_change_detail_position_in">目标位置</string>
    <string name="detail_title_title">标题：</string>
    <string name="detail_description_title">描述：</string>
    <string name="stock_check">盘点</string>
    <string name="title">标题</string>
    <string name="login_quit">注销</string>
    <string name="manager_user_info">用户信息</string>
    <string name="mananger_over">已完成</string>
    <string name="manager_unover">未完成</string>
    <string name="user">用户</string>
    <string name="item_stock_out_detail_store">仓库</string>
    <string name="item_stock_check_detail_position">位置</string>
    <string name="item_stock_check_detail_num">数量</string>
    <string name="stock_search">查询</string>
    <string name="stock_user">用户</string>
    <string name="item_stock_warehouse">仓库</string>

    <!-- 标题栏 -->
    <string name="title_stock_in"> &#160;入库任务列表</string>
    <string name="title_stock_out"> &#160;出库任务列表</string>
    <string name="title_stock_change">&#160; 移库任务列表</string>
    <string name="title_stock_check">&#160; 盘点任务列表</string>
    <string name="title_unover">&#160; 未完成任务列表</string>
    <string name="title_over">&#160; 已完成任务列表</string>

    <!-- location -->
    <string name="shelf">货架</string>
    <string name="area">货区</string>
    <string name="layer">内层</string>

</resources>
