<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".stock_in.view.ScanActivity"
    android:padding="8dp"
    android:background="@color/white">

    <include
        android:id="@+id/scan_type_first"
        layout="@layout/item_choose"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/scan_type_second"
        layout="@layout/item_choose"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_type_first" />

    <include
        android:id="@+id/scan_item_title"
        layout="@layout/item_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/scan_type_second"
        app:layout_constraintBottom_toTopOf="@id/scan_info_view"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scan_info_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/scan_btn_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_item_title"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/bg_text_area">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scan_btn_start"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_r_primary"
        android:text="@string/stock_in_start_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/scan_btn_stop"
        android:layout_marginEnd="4dp"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scan_btn_stop"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_r_primary"
        android:text="@string/stock_in_stop_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/scan_btn_reset"
        app:layout_constraintLeft_toRightOf="@id/scan_btn_start"
        android:layout_marginStart="4dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scan_btn_reset"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_r_primary"
        android:text="@string/stock_in_reset_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/scan_btn_submit"
        app:layout_constraintLeft_toRightOf="@id/scan_btn_stop"
        android:layout_marginStart="4dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scan_btn_submit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_r_primary"
        android:text="@string/stock_in_submit_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/scan_btn_reset"
        android:layout_marginStart="4dp"/>

</android.support.constraint.ConstraintLayout>