<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@color/white">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:srcCompat="@drawable/ic_login_back_round" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.51"
        app:srcCompat="@drawable/ic_login_back" />

    <TextView
        android:id="@+id/login_app_name"
        android:text="@string/app_chinese_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        android:textSize="20sp"
        android:layout_marginTop="16sp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_username_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/login_username_hint"
        android:textColorHint="@color/glory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_company">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/glory"
        android:hint="@string/login_password_hint"
        app:layout_constraintTop_toBottomOf="@id/login_username_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_enter"
        android:background="@drawable/bg_btn"
        android:text="@string/login_enter"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/login_password_parent"
        android:layout_marginTop="8dp"
        android:textSize="19sp"
        android:layout_height="48dp" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/login_company"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toBottomOf="@+id/login_app_name" />

</android.support.constraint.ConstraintLayout>