<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".stock_in.view.InActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/scan_type_first"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/scan_type_second"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_type_first" />

            <include
                android:id="@+id/scan_name"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_type_second" />

            <include
                android:id="@+id/scan_warehouse"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/scan_block1"
                app:layout_constraintEnd_toEndOf="@id/scan_name"
                app:layout_constraintStart_toStartOf="@id/scan_name"
                app:layout_constraintTop_toBottomOf="@id/scan_warehouse"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/scan_shelf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/shelf"
                    android:background="@drawable/item_text_back"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/scan_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/area"
                    android:background="@drawable/item_text_back"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
            </LinearLayout>

            <include
                android:id="@+id/scan_spinner_area"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_block1"
                android:visibility="gone"/>

            <include
                android:id="@+id/scan_spinner_shelf"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_spinner_area"
                />

            <include
                android:id="@+id/scan_spinner_layer"
                layout="@layout/item_choose"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_spinner_shelf"
                />

            <!--出库条目标题头-->
            <include
                android:id="@+id/detail_stock_in_title"
                layout="@layout/item_stock_out_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/scan_spinner_layer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_stock_in"
                android:layout_width="0dp"
                android:layout_height="136dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_text_area"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_stock_in_title"/>



            <include
                android:id="@+id/scan_item_title"
                layout="@layout/item_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@id/scan_info_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_stock_in"
                />




            <android.support.v7.widget.RecyclerView
                android:id="@+id/scan_info_view"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_text_area"
                app:layout_constraintBottom_toTopOf="@id/scan_btn_start"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_item_title"
                app:layout_constraintVertical_bias="0.0">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/scan_btn_start"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/stock_in_start_scan"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/scan_btn_stop" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/scan_btn_stop"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/stock_in_stop_scan"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/scan_btn_start"
                app:layout_constraintRight_toRightOf="@id/scan_btn_reset" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/scan_btn_reset"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/stock_in_reset_scan"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/scan_btn_stop"
                app:layout_constraintRight_toLeftOf="@id/scan_btn_submit" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/scan_btn_submit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/stock_in_submit_scan"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/scan_btn_reset"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/in_scan_snackbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>